<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">MYSCHOOL</string>
        <string name="welcome">Welcome</string>
        <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="login">Login</string>
        <string name="register">Register</string>
       <string name="language_setting">Change Language</string>
       <string name="action_settings">Language</string>
      <string name="actins_eng">English</string>
       <string name="actins_hn">Hindi</string>
    <string name="actins_mr">Marathi</string>
    <string name="actins_es">Spanish</string>
    <string name="actins_fr">French</string>
        <string name="All_the">All the fields marked with * are mandatory</string>
        <string name="email">Email</string>
        <string name="mobile">Mobile Number</string>
        <string name="address">Address</string>
        <string name="check_box">I Accept Terms &amp; Conditinons *</string>
        <string name="allredy">Already has account!Login here</string>
        <string name="check_connection">Please check internet connection of your device</string>
        <string name="connectivity">Connectivity</string>
        <string name="settings">SETTINGS</string>
        <string name="ok">OK</string>
        <string name="hellouser">Hello User Name</string>
        <string name="logintime">Last Login Time:Monday,12 july 2016</string>
        <string name="star">*</string>
        <string name="loginDate">Last Login Time: Monday,12 July 2016</string>
        <string name="google_maps">GOOGLE MAPS</string>
        <string name="_9898989898">9898989898</string>
        <string name="error_message_username">Please enter your username</string>
        <string name="error_message_password">Please enter your password</string>
        <string name="erorr_message_mobile_number">Please enter your mobile number</string>
        <string name="error_message_email">Please enter your email address</string>
        <string name="error_message_address">Please enter your Address</string>
        <string name="addres_name">address_name</string>
        <string name="home">Home Pages</string>
        <string name="contact_name">contact_name</string>
        <string name="image">phone image</string>
    <string name="action_favorite">fav</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="subtype">Subtype</string>
    <string name="roaming">Roaming status</string>
    <string name="menu_settings">Settings</string>

</resources>