<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dip"
            android:layout_marginTop="100dp">
            <!--  Email Label -->
            <!--  Password Label -->
            <!-- Login button -->

            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:hint="@string/username"/>

            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/password"/>

            <Button android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dip"
                android:text="@string/login"
                android:layout_gravity="center"/>
            <!-- Link to Registration Screen -->
            <Button android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dip"
                android:layout_gravity="center"
                android:text="@string/register"/>
        </LinearLayout>
        <!-- Login Form Ends -->

</ScrollView>