<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dip"
            android:weightSum="1">

            <TextView
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/All_the"
                android:layout_marginBottom="30dip"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colourRed"/>
            <!-- User Name Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--android:drawableLeft="@android:drawable/btn_star"-->
                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:background="@drawable/text_border"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/username"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:gravity="center"
                    android:layout_weight="20"
                    android:id="@+id/username_star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/star"
                    android:textColor="@color/colourRed"/>
            </LinearLayout>
            <!--  password Label -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <EditText
                android:id="@+id/edtpass"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/text_border"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:textColor="@color/colourBlack"
                android:layout_marginBottom="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_weight="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/colourRed"/>
    </LinearLayout>
            <!-- Mobile number Label -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <EditText
                android:id="@+id/edtMobile"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/text_border"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/mobile"
                android:textColor="@color/colourBlack"
                android:layout_marginBottom="20dip"/>
        <TextView
            android:gravity="center"
            android:layout_weight="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/colourRed"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <EditText
                android:id="@+id/emai"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/text_border"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:hint="@string/email"
                android:textColor="@color/colourBlack"
                android:layout_marginBottom="20dip"/>
        <TextView
            android:gravity="center"
            android:layout_weight="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/colourRed"/>
        </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText

                android:id="@+id/edtAddress"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/text_border"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:hint="@string/address"
                android:textColor="@color/colourBlack"
                android:layout_marginBottom="20dip"/>
                <TextView
                    android:gravity="center"
                    android:layout_weight="20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/star"
                    android:textColor="@color/colourRed" />
            </LinearLayout>
            <!-- Register Button -->
            <TextView
                android:id="@+id/register_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box"
                android:checked="false" />

            <Button

                android:background="@drawable/text_border"
                android:id="@+id/btnRegister"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/register"
                android:textColor="@color/colourBluefent"
                android:layout_gravity="center"/>
            <!-- Link to Login Screen -->
            <TextView android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/allredy"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colourBluefent"/>

        </LinearLayout>
        <!-- Registration Form Ends -->
</ScrollView>